src/picParser.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = "xxxx",
        peg$c1 = { type: "literal", value: "xxxx", description: "\"xxxx\"" },
        peg$c2 = peg$FAILED,
        peg$c3 = null,
        peg$c4 = [],
        peg$c5 = function(s) { 
          var instDirects = [];
          instDirects = s.filter(function(obj){
            return obj.type==="inst" || obj.type==="directive";
          });
          return {instDirects:instDirects, s:s, idents:ids, comments:comments};
        },
        peg$c6 = function(s) { return s; },
        peg$c7 = function(def) { return def; },
        peg$c8 = "const",
        peg$c9 = { type: "literal", value: "const", description: "\"const\"" },
        peg$c10 = function(ident, num) { var name, id;
           name = ident.name;
           id=getIdent(name);
           if(id){
             error("Identifier '"+name+"' is already defined! (at line:"+id.line+")");
           }
           id = {type:"ident", subType:"const", constType:"number", name:name, value:num.value, isNumber:true};
           addIdent(id);
           return id;
         },
        peg$c11 = "defFile",
        peg$c12 = { type: "literal", value: "defFile", description: "\"defFile\"" },
        peg$c13 = function(ident, num) { var name, id;
           name = ident.name;
           id=getIdent(name);
           if(id){
             error("Identifier '"+name+"' is already defined! (at line:"+id.line+")");
           }
           id = {type:"ident", subType:"file", name:name, value:num.value};
           addIdent(id);
           return id;
         },
        peg$c14 = "defBit",
        peg$c15 = { type: "literal", value: "defBit", description: "\"defBit\"" },
        peg$c16 = function(ident, bIdent) { var name, id;
           name = ident.name;
           id = getIdent(name);
           if(id){
             error("Identifier '"+name+"' is already defined! (at line:"+id.line+")");
           }
           id = {type:"ident", subType:"bit", name:name,
                 fileIdent:bIdent.fileIdent, bit:bIdent.bit};
           if(bIdent.error) { expected(bIdent.error); }
           addIdent(id);
           return id;
         },
        peg$c17 = ":",
        peg$c18 = { type: "literal", value: ":", description: "\":\"" },
        peg$c19 = function(ident) { var name, id;
           name = ident.name;
           id = getIdent(name);
           if(id){
             if(id.defined || id.subType!=="address"){
               error("Identifier '"+name+"' is already defined! (at line:"+id.line+")");
             }
             id.defined = true;
             id.line=line(); id.column=column();
           } else {
             id = {type:"ident", subType:"address", name:name, defined:true};
             addIdent(id);
           }
           return {type:"directive", subType:"label", ident:id,
                   line:line(), column:column()};
         },
        peg$c20 = "setAddress",
        peg$c21 = { type: "literal", value: "setAddress", description: "\"setAddress\"" },
        peg$c22 = function(num) {
           return {type:"directive", subType:"setAddress", num:num,
                   line:line(), column:column()};
         },
        peg$c23 = "//",
        peg$c24 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c25 = /^[^\n]/,
        peg$c26 = { type: "class", value: "[^\\n]", description: "[^\\n]" },
        peg$c27 = "\n",
        peg$c28 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c29 = function(c) { var obj;
           obj = {type:"comment", subType:"line", comment:c.join(""),
                  line:line(), column:column()};
           comments.push(obj);
           return obj;
         },
        peg$c30 = "/*",
        peg$c31 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c32 = void 0,
        peg$c33 = "*/",
        peg$c34 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c35 = { type: "any", description: "any character" },
        peg$c36 = function(c) { var obj;
           c=c.map(function(i){return i[1];});
           obj = {type:"comment", subType:"block", comment:c.join(""),
                  line:line(), column:column()};
           comments.push(obj);
           return obj;
         },
        peg$c37 = /^[^}]/,
        peg$c38 = { type: "class", value: "[^}]", description: "[^}]" },
        peg$c39 = function(next) { var name, id;
           name = next.name;
           if(name){
             id = getIdent(name);
             if(id){
               error("'"+name+"'"+JSON.stringify(id));
             } else {
               error("'"+name+"' is not expected or is undefined!");
             }
           } else {
             error("'"+next+"' is unexpected!");
           }
         },
        peg$c40 = "nop",
        peg$c41 = { type: "literal", value: "nop", description: "\"nop\"" },
        peg$c42 = function() { return createInst("nop", null); },
        peg$c43 = "clrWdt",
        peg$c44 = { type: "literal", value: "clrWdt", description: "\"clrWdt\"" },
        peg$c45 = "clrWDT",
        peg$c46 = { type: "literal", value: "clrWDT", description: "\"clrWDT\"" },
        peg$c47 = function() { return createInst("clrWDT", null); },
        peg$c48 = "sleep",
        peg$c49 = { type: "literal", value: "sleep", description: "\"sleep\"" },
        peg$c50 = function() { return createInst("sleep", null); },
        peg$c51 = "retfie",
        peg$c52 = { type: "literal", value: "retfie", description: "\"retfie\"" },
        peg$c53 = function() { return createInst("retfie", null); },
        peg$c54 = "reset",
        peg$c55 = { type: "literal", value: "reset", description: "\"reset\"" },
        peg$c56 = function() { return createInst("reset", null); },
        peg$c57 = "return",
        peg$c58 = { type: "literal", value: "return", description: "\"return\"" },
        peg$c59 = function(ident) { return createInst("return", ident); },
        peg$c60 = "setBSR",
        peg$c61 = { type: "literal", value: "setBSR", description: "\"setBSR\"" },
        peg$c62 = function(ident) { return createInst("setBSR", ident); },
        peg$c63 = "setPCLATH",
        peg$c64 = { type: "literal", value: "setPCLATH", description: "\"setPCLATH\"" },
        peg$c65 = function(ident) { return createInst("setPCLATH", ident); },
        peg$c66 = "clr",
        peg$c67 = { type: "literal", value: "clr", description: "\"clr\"" },
        peg$c68 = function(ident) { return createInst("clr", ident); },
        peg$c69 = "com",
        peg$c70 = { type: "literal", value: "com", description: "\"com\"" },
        peg$c71 = function(idend) { return createInstr("com", ident); },
        peg$c72 = "test",
        peg$c73 = { type: "literal", value: "test", description: "\"test\"" },
        peg$c74 = function(ident) { return createInst("test", ident); },
        peg$c75 = "option",
        peg$c76 = { type: "literal", value: "option", description: "\"option\"" },
        peg$c77 = function(ident) { return createInst("option", ident); },
        peg$c78 = "tris",
        peg$c79 = { type: "literal", value: "tris", description: "\"tris\"" },
        peg$c80 = "A",
        peg$c81 = { type: "literal", value: "A", description: "\"A\"" },
        peg$c82 = "B",
        peg$c83 = { type: "literal", value: "B", description: "\"B\"" },
        peg$c84 = "C",
        peg$c85 = { type: "literal", value: "C", description: "\"C\"" },
        peg$c86 = function(t, ident) { return createInst("tris"+t, ident); },
        peg$c87 = "goto",
        peg$c88 = { type: "literal", value: "goto", description: "\"goto\"" },
        peg$c89 = function(ident) { return createInst("goto", ident); },
        peg$c90 = "call",
        peg$c91 = { type: "literal", value: "call", description: "\"call\"" },
        peg$c92 = function(ident) { return createInst("call", ident); },
        peg$c93 = function(ident, arg) { var obj = createInst("call", ident);
           obj.arg = arg;
           return obj;
         },
        peg$c94 = "=",
        peg$c95 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c96 = "+=",
        peg$c97 = { type: "literal", value: "+=", description: "\"+=\"" },
        peg$c98 = "-=",
        peg$c99 = { type: "literal", value: "-=", description: "\"-=\"" },
        peg$c100 = "&=",
        peg$c101 = { type: "literal", value: "&=", description: "\"&=\"" },
        peg$c102 = "^=",
        peg$c103 = { type: "literal", value: "^=", description: "\"^=\"" },
        peg$c104 = "+c",
        peg$c105 = { type: "literal", value: "+C", description: "\"+C\"" },
        peg$c106 = "-b",
        peg$c107 = { type: "literal", value: "-B", description: "\"-B\"" },
        peg$c108 = "+1",
        peg$c109 = { type: "literal", value: "+1", description: "\"+1\"" },
        peg$c110 = "+w",
        peg$c111 = { type: "literal", value: "+W", description: "\"+W\"" },
        peg$c112 = "-1",
        peg$c113 = { type: "literal", value: "-1", description: "\"-1\"" },
        peg$c114 = "-w",
        peg$c115 = { type: "literal", value: "-W", description: "\"-W\"" },
        peg$c116 = "-w-b",
        peg$c117 = { type: "literal", value: "-W-B", description: "\"-W-B\"" },
        peg$c118 = "-w+c",
        peg$c119 = { type: "literal", value: "-W+C", description: "\"-W+C\"" },
        peg$c120 = "^0xff",
        peg$c121 = { type: "literal", value: "^0xFF", description: "\"^0xFF\"" },
        peg$c122 = "^255",
        peg$c123 = { type: "literal", value: "^255", description: "\"^255\"" },
        peg$c124 = function(dest, op, src, ex) { var obj = createInst("assignment", null);
            if(!ex){ex="";} 
            ex=ex.toUpperCase();
            obj.op=op; obj.src=src; obj.dest=dest; obj.ex=ex;
            return obj;
         },
        peg$c125 = "if",
        peg$c126 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c127 = "Not",
        peg$c128 = { type: "literal", value: "Not", description: "\"Not\"" },
        peg$c129 = "BitClr",
        peg$c130 = { type: "literal", value: "BitClr", description: "\"BitClr\"" },
        peg$c131 = "BitSet",
        peg$c132 = { type: "literal", value: "BitSet", description: "\"BitSet\"" },
        peg$c133 = "Borrow",
        peg$c134 = { type: "literal", value: "Borrow", description: "\"Borrow\"" },
        peg$c135 = "==",
        peg$c136 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c137 = "!=",
        peg$c138 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c139 = /^[01]/,
        peg$c140 = { type: "class", value: "[01]", description: "[01]" },
        peg$c141 = function(notBitClrSet, ident, pre, block, elseBlock) { // if no cmp & ident is 'bit' then 'BitSet', or is 'file' then 'NotZero'
           var not, ifText = text().split(")")[0]+")";
           not = notBitClrSet==="Not";
           if(pre) { pre = pre[0]+pre[2]; } 
           if(ident==="Borrow") { ident=getIdent("Carry"); not=!not; }
           return {type:"inst", subType:"if", not:!!not, bitClrSet:notBitClrSet,
                   ident:ident, pre:pre, line:line(), column:column(), text:ifText};
         },
        peg$c142 = ".",
        peg$c143 = { type: "literal", value: ".", description: "\".\"" },
        peg$c144 = "set",
        peg$c145 = { type: "literal", value: "set", description: "\"set\"" },
        peg$c146 = "Set",
        peg$c147 = { type: "literal", value: "Set", description: "\"Set\"" },
        peg$c148 = "Clr",
        peg$c149 = { type: "literal", value: "Clr", description: "\"Clr\"" },
        peg$c150 = function(bitIdent, t) { 
           return {type:"inst", subType:"bit"+t.toLowerCase(), bitIdent:bitIdent,
                   line:line(), column:column(), text:text().trim()}; 
         },
        peg$c151 = function(statements) { return statements; },
        peg$c152 = "else",
        peg$c153 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c154 = function(block) { return block; },
        peg$c155 = function(ident) {
           var id, name=ident.name 
           id = getIdent(name);
           // expect an addressIdent
           if(id) {
             return id;
           } else {
             // OK assume that it is defined some where ahead
             id = {type:"ident", subType:"address", name:name, defined:false};
             addIdent(id);
           }
           return id;
         },
        peg$c156 = function(ident) {
          var id=getIdent(ident.name);
          if(id) { return id; }
          else { error("'"+ident.name+"' is not defined!"); }
        },
        peg$c157 = function(ident) { var id=getIdent(ident.name);
            if(!id) { error("'"+ident.name+"' is not defined!"); }
            return id.subType==="bit"; },
        peg$c158 = function(ident) { id = getIdent(ident.name); return id; },
        peg$c159 = function(ident) { return getIdent(ident.name).subType==="file"; },
        peg$c160 = function(ident, bit) { return {type:"ident", subType:"bit", fileIdent:ident, bit:bit}; },
        peg$c161 = function(id) { return id; },
        peg$c162 = /^[_a-zA-Z]/,
        peg$c163 = { type: "class", value: "[_a-zA-Z]", description: "[_a-zA-Z]" },
        peg$c164 = /^[_0-9a-zA-Z]/,
        peg$c165 = { type: "class", value: "[_0-9a-zA-Z]", description: "[_0-9a-zA-Z]" },
        peg$c166 = function(f, r) { return (f+r) in reservedWords; },
        peg$c167 = function(f, r) { return {type:"identRef", name:f+r, line:line(), column:column()}; },
        peg$c168 = function(f, r) { return f+r; },
        peg$c169 = function(num) { return {type:"number", value:num, isNumber:true}; },
        peg$c170 = "0x",
        peg$c171 = { type: "literal", value: "0x", description: "\"0x\"" },
        peg$c172 = /^[0-9a-fA-F]/,
        peg$c173 = { type: "class", value: "[0-9a-fA-F]", description: "[0-9a-fA-F]" },
        peg$c174 = function(d) { return parseInt(d, 16); },
        peg$c175 = /^[0-9]/,
        peg$c176 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c177 = function(d) { return parseInt(d, 10); },
        peg$c178 = "0b",
        peg$c179 = { type: "literal", value: "0b", description: "\"0b\"" },
        peg$c180 = "0B",
        peg$c181 = { type: "literal", value: "0B", description: "\"0B\"" },
        peg$c182 = function(d) { return parseInt(d, 2); },
        peg$c183 = /^[0-7]/,
        peg$c184 = { type: "class", value: "[0-7]", description: "[0-7]" },
        peg$c185 = function(b) { return parseInt(b, 10); },
        peg$c186 = "(",
        peg$c187 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c188 = function() { return "("; },
        peg$c189 = ")",
        peg$c190 = { type: "literal", value: ")", description: "\")\"" },
        peg$c191 = function() { return ")"; },
        peg$c192 = function() { return "()"; },
        peg$c193 = "{",
        peg$c194 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c195 = function() { return String.fromCharCode(123); },
        peg$c196 = "}",
        peg$c197 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c198 = function() { return String.fromCharCode(125); },
        peg$c199 = /^[ \t]/,
        peg$c200 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c201 = /^[;\n\r]/,
        peg$c202 = { type: "class", value: "[;\\n\\r]", description: "[;\\n\\r]" },
        peg$c203 = function() { return "[end]"; },
        peg$c204 = ",",
        peg$c205 = { type: "literal", value: ",", description: "\",\"" },
        peg$c206 = /^[ \t\n\r]/,
        peg$c207 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parsestart() {
      var s0;

      s0 = peg$parsestatements();

      return s0;
    }

    function peg$parsexxxx() {
      var s0;

      if (input.substr(peg$currPos, 4) === peg$c0) {
        s0 = peg$c0;
        peg$currPos += 4;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }

      return s0;
    }

    function peg$parsestatements() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parsews();
      if (s1 === peg$FAILED) {
        s1 = peg$c3;
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsedef();
        if (s3 === peg$FAILED) {
          s3 = peg$parsesetAddress();
          if (s3 === peg$FAILED) {
            s3 = peg$parselineComment();
            if (s3 === peg$FAILED) {
              s3 = peg$parseblockComment();
              if (s3 === peg$FAILED) {
                s3 = peg$parseblockStatement();
                if (s3 === peg$FAILED) {
                  s3 = peg$parsestatement();
                }
              }
            }
          }
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsedef();
          if (s3 === peg$FAILED) {
            s3 = peg$parsesetAddress();
            if (s3 === peg$FAILED) {
              s3 = peg$parselineComment();
              if (s3 === peg$FAILED) {
                s3 = peg$parseblockComment();
                if (s3 === peg$FAILED) {
                  s3 = peg$parseblockStatement();
                  if (s3 === peg$FAILED) {
                    s3 = peg$parsestatement();
                  }
                }
              }
            }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$reportedPos = s0;
          s1 = peg$c5(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$c2;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c2;
      }

      return s0;
    }

    function peg$parseblockStatement() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseblock();
      if (s1 === peg$FAILED) {
        s1 = peg$parseif();
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c6(s1);
      }
      s0 = s1;

      return s0;
    }
